# the-war

./: .gitignore  CMakeLists.txt  Makefile  config.json  vcpkg.json
src/: main.cc
src/dtos/: army.cc  army.h  unit.cc  unit.h
src/field/: field.cc  field.h
src/server/: server_frame.cc  server_frame.h
src/utils/: cleanup_dtor.h  defines.h  utils.cc  utils.h
web/: index.html
web/js/: general.js
